# Nmap Changelog ($Id$); -*-text-*-

o [NSE] ssh-hostkey now additionally has a postrule that prints hosts
  that have the same hostkey. [Henri Doreau]

o [NSE] Added dns-nsec-enum.nse, which quickly enumerates the domains
  of a DNSSEC server that uses NSEC records for nonexistent domains.
  [John Bond, David]

o Nmap no longer searches for data files (like nmap-services) in the
  current directory as a last resort. This is to reduce the chance of
  accessing an unexpected file in case the system-installed data files
  are not found. The main reason for searching the current directory
  was to support running ./nmap from a source directory. This is now
  supported by searching the directory containing the Nmap executable
  for data files. On non-Windows platforms, the executable directory
  followed by "../share/nmap" is also searched. Thanks to Solar
  Designer for implementation advice. [David]

o Updated nmap-rpc from the master list, now maintained by IANA.
  [Daniel Miller, David]

o [NSE] Added ssl-known-key.nse, which checks SSL certificates against a
  list of certificates with known keys that have been extracted from
  firmware files. [Mak Kolybabi]

o [Ndiff] The Nmap banner (with the version number and date of the scan)
  is not printed unless there were other differences. This makes Nidff
  produce no output when there wre no differences other than the version
  number and date. Dr. Jesus contributed an initial patch. [David]

o [Zenmap] Fixed a bug in the option parser: -sN (null scan) was
  interpreted as -sn (no port scan). This was reported by
  shitaneddine. [David]

o [NSE] Fixed a problem in oracle-brute that would fail due to connection
  exhaustion. Fixed some debugging messages in the brute library [Patrik]

o [Ndiff] Fixed the Mac OS X packages to use the correct path for
  Python: /usr/bin/python instead of /opt/local/bin/python. The bug
  was reported by Wellington Castello. [David]
